--- a/src/index.css
+++ b/src/index.css
@@ -967,6 +967,12 @@ a {
   margin: 10px auto;
   padding: 0 10px;
   cursor: pointer;
+  transition: 200ms;
+}
+
+.gallery-images-container img:hover {
+  transform: scale(1.1);
+  filter: opacity(70%);
 }
 
 .popup-gallery-image-container {
@@ -1022,6 +1028,22 @@ a {
 
 /*------------------------------- CONTACT -------------------------------*/
 
+@keyframes vanish {
+  0%,
+  100% {
+    filter: opacity(0)
+  }
+  15%,
+  75% {
+    filter: opacity(100%)
+  }
+
+}
+
+.vanish {
+  animation: vanish 5s linear 0s 1 normal none;
+}
+
 .contact {
   display: grid;
   grid-template-columns: repeat(2, 50%);
@@ -1062,13 +1084,15 @@ a {
   grid-column: 1 / 3;
 }
 
-.email-msg {
+.email-success,
+.email-error {
   display: none;
   align-items: center;
   justify-content: center;
 }
 
-.email-msg img {
+.email-success img,
+.email-error img {
   height: 50px;
 }
 
