--- a/src/index.css
+++ b/src/index.css
@@ -768,11 +768,12 @@ a {
 }
 
 .about-main {
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(255,229,172,1) 100%);
   box-sizing: border-box;
   width: 100%;
   height: auto;
   padding-bottom: 100px;
-  background-image: url("src/assets/backgrounds/about-content.jpg");
 }
 
 .about-main h3 {
@@ -780,7 +781,7 @@ a {
   margin: 0 auto;
   width: fit-content;
   font-size: 25px;
-  color: rgb(21, 71, 87);
+  color: rgb(0, 0, 0);
 }
 
 .about-main-background {
