--- a/src/index.css
+++ b/src/index.css
@@ -980,7 +980,7 @@ a {
   background-color: rgb(0,0,0,0.9);
   height: 100%;
   width: 90%;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
